
class ProcessResult:

    def __init__(self, name):
        pass
